# hive

./: .gitignore  .hive.toml  .pre-commit-config.yaml  CLAUDE_TECHNICAL_DESIGN_DOC.md  FEEDBACK.md  IMPLEMENTATION_SUMMARY.md  NOTES_DESIGN.md  README.md  TECHNICAL_DESIGN_DOC.md  pyproject.toml  pytest.ini
.jules/: bolt.md
.opencode/agents/: mayor.md  queen.md
00/b3caa6fb68/: metadata.json
03/9a03d0fac8/: metadata.json
04/0722fdef20/: metadata.json
04/1a5ee10e8d/: metadata.json
08/4b5ae5e3a1/: metadata.json
0a/130bcfb127/: metadata.json
0a/49d6229876/: metadata.json
10/b289a1c95f/: metadata.json
docs/: BUG_REPORT_WORKTREE_LOCK_CONTENTION_2026-02-18.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  NOTES_RAG_DESIGN.md  NOTES_SPEC.md  REFINERY_FIRST_MERGE_SPEC.md  SMART_ROUTING_SPEC.md  STATE_MACHINE_SIMPLIFICATION.md  TECHNICAL_DESIGN_DOC.md  design_backend_abc.md  design_global_db.md  design_metrics.md  design_packaging.md  design_vector_notes.md
src/hive/: db.py  (+19 more)
tests/: conftest.py  fake_backend.py  fake_opencode.py  test_backend_opencode.py  test_backend_pool.py  test_backend_tau.py  test_claude_ws.py  test_cli.py  test_cli_helpers.py  test_config.py  test_cost_guardrails.py  test_db.py  test_diag.py  test_git.py  test_ids.py  test_integration.py  test_lease_debounce.py  test_mayor.py  test_merge.py  test_merge_preflight.py  test_metrics.py  test_multiworker.py  test_opencode.py  test_orchestrator.py  test_orchestrator_perf.py  test_prompts.py  test_queen.py  test_race_conditions.py  test_refinery_prompt_modes.py  test_sse.py  test_status.py
(+486 files in other folders)
